[FIX] 패키지 이전작업 수행

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,6 @@ spring:
     username: ${MYSQL_USERNAME}
   profiles:
     active: ${SPRING_PROFILE}
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
