--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,7 @@ dependencies {
 	implementation("org.jetbrains.kotlin:kotlin-reflect")
 	implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	//mysql
-	//runtimeOnly("mysql:mysql-connector-java")
-	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.1'
+	runtimeOnly("mysql:mysql-connector-java")
 	//jwt
 	implementation ("io.jsonwebtoken:jjwt:0.9.1")
 	//swagger
