--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       MYSQL_PASSWORD: root
       MYSQL_USERNAME: root
       SPRING_PROFILE: ${SPRING_PROFILE}
+      JWT_SECRET_KEY: ${JWT_SECRET_KEY}
     build: .
     ports:
       - 8080:8080
