[ADD] 변경사항 적용

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       MYSQL_USERNAME: root
       SPRING_PROFILE: ${SPRING_PROFILE}
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
+      GITHUB_TOKEN: ${GITHUB_TOKEN}
     build: .
     ports:
       - 8080:8080
